<resources >
    <string name="app_name">Countries</string>
    <string name="choose_country">choose country</string>
    <string name="america_flag">america_flag</string>
    <string name="entertainment_venues">Entertainment venues</string>
    <string name="universities">Universities</string>
    <string name="imperial_college_london">imperial college london</string>
    <string name="cities">*cities*</string>
    <string name="london">•London</string>
    <string name="manchester">•Manchester</string>
    <string name="bristol">•Bristol</string>
    <string name="edinburgh">•Edinburgh</string>
    <string name="brighton">•Brighton</string>
    <string name="glasgow">•Glasgow</string>
    <string name="birmingham">•Birmingham</string>
    <string name="cardiff">•Cardiff</string>
    <string name="companies">*Companies*</string>
    <string name="british_american_tobacco">•BATS</string>
    <string name="glaxosmithkline">•GlaxoSmithKline</string>
    <string name="astrazeneca">•AstraZeneca</string>
    <string name="hsbc">•HSBC</string>
    <string name="diageo">•Diageo</string>
    <string name="shell_plc">•Shell plc</string>
    <string name="unilever">•Unilever</string>
    <string name="melbourne">•Melbourne</string>
    <string name="perth">•Perth</string>
    <string name="brisbane">•Brisbane</string>
    <string name="sydney">•Sydney</string>
    <string name="adelaide">•Adelaide</string>
    <string name="gold_coast">•Gold Coast</string>
    <string name="hobart">•hobart</string>
    <string name="telstra">•Telstra</string>
    <string name="anz">•ANZ</string>
    <string name="nab">•NAB</string>
    <string name="westpac">•Westpac</string>
    <string name="csl_australia">•csl australia</string>
    <string name="netbank">•Netbank</string>
    <string name="rio_tinto">•Rio Tinto</string>
    <string name="new_york">•New York</string>
    <string name="san_francisco">•San Francisco</string>
    <string name="austin">•Austin</string>
    <string name="boston">•Boston</string>
    <string name="washington">•Washington</string>
    <string name="chicago">•Chicago</string>
    <string name="portland">•Portland</string>
    <string name="seattle">•Seattle</string>
    <string name="amazon">•Amazon</string>
    <string name="microsoft">•Microsoft</string>
    <string name="walmart">•Walmart</string>
    <string name="costco">•Costco</string>
    <string name="tesla">•Tesla</string>
    <string name="apple">•Apple</string>
    <string name="google">•Google</string>
    <string name="bruges">•Bruges</string>
    <string name="brussels">•Brussels</string>
    <string name="ghent">•Ghent</string>
    <string name="antwerp">•Antwerp</string>
    <string name="leuven">•Leuven</string>
    <string name="mons">•Mons</string>
    <string name="mechelen">•Mechelen</string>
    <string name="ab_inbev">•AB InBev</string>
    <string name="kbc_bank">•KBC Bank</string>
    <string name="ageas">•Ageas</string>
    <string name="solvay_s_a">•Solvay S.A.</string>
    <string name="Dexia">•Dexia</string>
    <string name="umicore">•Umicore</string>
    <string name="ucb">•UCB</string>
    <string name="rio_de_janeiro">•Rio de Janeiro</string>
    <string name="s_o_paulo">•São Paulo</string>
    <string name="florian_polis">•Florianópolis</string>
    <string name="salvador">•Salvador</string>
    <string name="curitiba">•Curitiba</string>
    <string name="manaus">•Manaus</string>
    <string name="belo_horizonte">•Belo Horizonte</string>
    <string name="bras_lia">•Brasília</string>
    <string name="petrobras">•Petrobras</string>
    <string name="Vale">•Vale company</string>
    <string name="Banco">•Banco Santander</string>
    <string name="ambev">•Ambev</string>
    <string name="ita_unibanco">•Itaú Unibanco</string>
    <string name="banco_bradesco">•Banco Bradesco</string>
    <string name="nu_holdings">•Nu Holdings</string>
    <string name="montreal">•Montreal</string>
    <string name="vancouver">•Vancouver</string>
    <string name="toronto">•Toronto</string>
    <string name="ottawa">•Ottawa</string>
    <string name="calgary">•Calgary</string>
    <string name="quebec_city">•Quebec City</string>
    <string name="Edmonton">•Edmonton</string>
    <string name="victoria">•victoria bc</string>
    <string name="westjet">•Westjet</string>
    <string name="mccain_foods">•McCain Foods</string>
    <string name="Canadian">•Canadian Tire</string>
    <string name="Hortons">•Tim Hortons</string>
    <string name="shoppers_drug_mart">•Shoppers Drug Mart</string>
    <string name="bombardier_inc">•Bombardier Inc</string>
    <string name="saputo">•Saputo</string>
    <string name="beijing">•Beijing</string>
    <string name="shanghai">•Shanghai</string>
    <string name="xi_an">•Xi An</string>
    <string name="chengdu">•Chengdu</string>
    <string name="hangzhou">•Hangzhou</string>
    <string name="guilin">•Guilin</string>
    <string name="suzhou">•Suzhou</string>
    <string name="guangzhou">•Guangzhou</string>
    <string name="tencent">•Tencent</string>
    <string name="kweichow_moutai">•Kweichow Moutai</string>
    <string name="alibaba">•Alibaba</string>
    <string name="icbc">•ICBC</string>
    <string name="catl">•CATL</string>
    <string name="meituan">•Meituan</string>
    <string name="petrochina">•PetroChina</string>
    <string name="paris">•Paris</string>
    <string name="Bordeaux">•Bordeaux</string>
    <string name="Marseille">•Marseille</string>
    <string name="Lyon">•Lyon</string>
    <string name="Strasbourg">•Strasbourg</string>
    <string name="toulouse">•Toulouse</string>
    <string name="nantes">•Nantes</string>
    <string name="Cannes">•Cannes</string>
    <string name="LVMH">•LVMH</string>
    <string name="lor_al">•LOréal</string>
    <string name="herm_s">•Hermès</string>
    <string name="Dior">•Dior</string>
    <string name="sanofi">•Sanofi</string>
    <string name="kering">•Kering</string>
    <string name="BNP">•BNP Paribas</string>
    <string name="Berlin">•Berlin</string>
    <string name="hamburg">•Hamburg</string>
    <string name="munich">•Munich</string>
    <string name="Frankfurt">•Frankfurt</string>
    <string name="d_sseldorf">•Düsseldorf</string>
    <string name="Cologne">•Cologne</string>
    <string name="leipzig">•Leipzig</string>
    <string name="stuttgart">•Stuttgart</string>
    <string name="volkswagen">•Volkswagen</string>
    <string name="daimler">•Daimler</string>
    <string name="Allianz">•Allianz</string>
    <string name="BMW">•BMW</string>
    <string name="Siemens">•Siemens</string>
    <string name="bosch_group">•Bosch Group</string>
    <string name="Uniper">•Uniper</string>
    <string name="Isfahan">•Isfahan</string>
    <string name="Tehran">•Tehran</string>
    <string name="shiraz">•Shiraz</string>
    <string name="yasd">•Yasd</string>
    <string name="Tabriz">•Tabriz</string>
    <string name="kashan">•Kashan</string>
    <string name="Mashhad">•Mashhad</string>
    <string name="kerman">•Kerman</string>
    <string name="khalije_fars_petrochemical">•Khalije Petrochemical</string>
    <string name="Mellat_bank">•Mellat Bank</string>
    <string name="Melli">•Melli Bank Holding</string>
    <string name="ghadir_investment_company">•Ghadir Investment</string>
    <string name="Parsian_Bank">•Parsian Bank</string>
    <string name="Tejarat_Bank">•Tejarat Bank</string>
    <string name="parsian_oil">•Parsian Oil</string>
    <string name="Rome">•Rome</string>
    <string name="Florence">•Florence</string>
    <string name="venice">•Venice</string>
    <string name="Milan">•Milan</string>
    <string name="Bologna">•Bologna</string>
    <string name="Naples">•Naples</string>
    <string name="Turin">•Turin</string>
    <string name="Verona">•Verona</string>
    <string name="assicurazioni_generali">•Assicurazioni Generali</string>
    <string name="exor">•Exor</string>
    <string name="UniCredit">•UniCredit</string>
    <string name="eni">•eni</string>
    <string name="intesa_sanpaolo">•Intesa Sanpaolo</string>
    <string name="poste_italiane">•Poste italiane</string>
    <string name="Generali">•Generali</string>
    <string name="tokyo">•Tokyo</string>
    <string name="Kyoto">•Kyoto</string>
    <string name="osaka">•Osaka</string>
    <string name="Nara">•Nara</string>
    <string name="sapporo">•Sapporo</string>
    <string name="Hiroshima">•Hiroshima</string>
    <string name="Fukuoka">•Fukuoka</string>
    <string name="Nagoya">•Nagoya</string>
    <string name="toyota_motor">•Toyota Motor</string>
    <string name="Mitsubishi">•Mitsubishi</string>
    <string name="Honda_Motor">•Honda Motor</string>
    <string name="Itochu">•Itochu</string>
    <string name="Sony">•Sony</string>
    <string name="Hitachi">•Hitachi</string>
    <string name="nippon_telegraph">•Nippon Telegraph</string>
    <string name="Seoul">Seoul</string>
    <string name="Busan">Busan</string>
    <string name="gyeongju">gyeongju</string>
    <string name="incheon">incheon</string>
    <string name="daegu">daegu</string>
    <string name="suwon">suwon</string>
    <string name="jeonju">jeonju</string>
    <string name="jeju_si">jeju_si</string>
    <string name="samsung">samsung</string>
    <string name="sk_hynix">sk_hynix</string>
    <string name="lg_chem">lg_chem</string>
    <string name="naver">naver</string>
    <string name="hyundai">hyundai</string>
    <string name="coupang">coupang</string>
    <string name="kakao">kakao</string>
    <string name="Amsterdam">Amsterdam</string>
    <string name="Hague">Hague</string>
    <string name="Rotterdam">Rotterdam</string>
    <string name="Utrecht">Utrecht</string>
    <string name="maastricht">maastricht</string>
    <string name="Leiden">Leiden</string>
    <string name="Delft">Delft</string>
    <string name="Haarlem">Haarlem</string>
    <string name="Royal">Royal</string>
    <string name="ING">ING</string>
    <string name="aegon">aegon</string>
    <string name="rabobank">rabobank</string>
    <string name="Philips">Philips</string>
    <string name="Ahold">Ahold</string>
    <string name="lillehammer">lillehammer</string>
    <string name="fredrikstad">fredrikstad</string>
    <string name="kristiansand">kristiansand</string>
    <string name="troms">troms</string>
    <string name="stavanger">stavanger</string>
    <string name="alesund">alesund</string>
    <string name="trondheim">trondheim</string>
    <string name="oslo">oslo</string>
    <string name="equinor">equinor</string>
    <string name="telenor_asa">telenor_asa</string>
    <string name="aker">aker</string>
    <string name="orkla">orkla</string>
    <string name="Aker">Aker</string>
    <string name="total_e_p_norge">total_e_p_norge</string>
    <string name="norsk">norsk</string>
    <string name="Madrid">•Madrid</string>
    <string name="Barcelona">•Barcelona</string>
    <string name="Seville">•Seville</string>
    <string name="granada">•Granada</string>
    <string name="Valencia">•Valencia</string>
    <string name="san_sebasti_n">•San Sebastián</string>
    <string name="Bilbao">•Bilbao</string>
    <string name="Alicante">•Alicante</string>
    <string name="inditex">•Inditex</string>
    <string name="iberdrola">•Iberdrola</string>
    <string name="Santander">•Santander</string>
    <string name="Cellnex">•Cellnex Telecom</string>
    <string name="Amadeus">•Amadeus IT Group</string>
    <string name="naturgy">•Naturgy</string>
    <string name="Zürich">•Zürich</string>
    <string name="lucerne">•Lucerne</string>
    <string name="Geneva">•Geneva</string>
    <string name="lausanne">•Lausanne</string>
    <string name="Basel">•Basel</string>
    <string name="Zermatt">• Zermatt</string>
    <string name="Montreux">•Montreux</string>
    <string name="nterlaken">•nterlaken</string>
    <string name="ericsson">•Ericsson</string>
    <string name="Essity">•Essity</string>
    <string name="Handm"><![CDATA[•H&M]]></string>
    <string name="IKEA">•IKEA</string>
</resources>