<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".KoreaActivity">


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:textSize="34sp"
            android:textColor="@color/black"
            android:id="@+id/cities_japan"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="70dp"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/bold3"
            android:text="@string/cities"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginTop="50dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="40dp"
            app:layout_constraintTop_toTopOf="@id/cities_japan"
            android:fontFamily="@font/italic"
            android:text="@string/tokyo"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginTop="80dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="40dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="@id/cities_japan"
            android:fontFamily="@font/italic"
            android:text="@string/Kyoto"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginTop="110dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="40dp"
            app:layout_constraintTop_toTopOf="@id/cities_japan"
            android:fontFamily="@font/italic"
            android:text="@string/osaka"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginTop="140dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="40dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="@id/cities_japan"
            android:fontFamily="@font/italic"
            android:text="@string/Nara"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginTop="170dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="40dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="@id/cities_japan"
            android:fontFamily="@font/italic"
            android:text="@string/sapporo"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginTop="200dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="40dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="@id/cities_japan"
            android:fontFamily="@font/italic"
            android:text="@string/Hiroshima"/>



        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginTop="230dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="40dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="@id/cities_japan"
            android:fontFamily="@font/italic"
            android:text="@string/Fukuoka"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginTop="260dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="40dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="@id/cities_japan"
            android:fontFamily="@font/italic"
            android:text="@string/Nagoya"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:text="@string/companies"
            android:textSize="34sp"
            android:textColor="@color/black"
            android:id="@+id/companies_japan"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="180dp"
            android:layout_marginTop="70dp"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/bold3"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:id="@+id/Toyota_Motor"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="210dp"
            app:layout_constraintTop_toTopOf="@id/companies_japan"
            android:fontFamily="@font/italic"
            android:text="@string/toyota_motor"/>



        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:id="@+id/Mitsubishi"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="210dp"
            app:layout_constraintTop_toTopOf="@id/companies_japan"
            android:fontFamily="@font/italic"
            android:text="@string/Mitsubishi"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginTop="110dp"
            android:gravity="center"
            android:id="@+id/Honda_Motor"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="210dp"
            app:layout_constraintTop_toTopOf="@id/companies_japan"
            android:fontFamily="@font/italic"
            android:text="@string/Honda_Motor"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginTop="140dp"
            android:gravity="center"
            android:id="@+id/Itochu"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="230dp"
            app:layout_constraintTop_toTopOf="@id/companies_japan"
            android:fontFamily="@font/italic"
            android:text="@string/Itochu"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginTop="170dp"
            android:gravity="center"
            android:id="@+id/Sony"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="230dp"
            app:layout_constraintTop_toTopOf="@id/companies_japan"
            android:fontFamily="@font/italic"
            android:text="@string/Sony"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginTop="200dp"
            android:id="@+id/Hitachi"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="230dp"
            app:layout_constraintTop_toTopOf="@id/companies_japan"
            android:fontFamily="@font/italic"
            android:text="@string/Hitachi"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginTop="230dp"
            android:gravity="center"
            android:id="@+id/Nippon_Telegraph"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="200dp"
            app:layout_constraintTop_toTopOf="@id/companies_japan"
            android:fontFamily="@font/italic"
            android:text="@string/nippon_telegraph"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>